--- a/Block_Puzzle/Assembly-CSharp.csproj
+++ b/Block_Puzzle/Assembly-CSharp.csproj
@@ -58,9 +58,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Block\BlockGenerator.cs" />
     <Compile Include="Assets\Scripts\CameraRotation.cs" />
-    <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\Scripts\Block\Block.cs" />
     <Compile Include="Assets\Scripts\Block\BlockGroupStatus.cs" />
+    <Compile Include="Assets\Scripts\Manager\UIManager.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Customizable Skybox\Stylized Sky\Shaders\Stylized Sky.shader" />
