See Through 기능 추가 / cube 관련 스크립트 조정
큐브 내부를 볼 수 있는 See Through 기능를 추가하였다. 시점 상 큐브의 중심과 바로 밑에 있는 블록의 색을 알 수 없기 때문에 해당 기능이 필요하다고 판단하였다.

--- a/Block_Puzzle/Assembly-CSharp.csproj
+++ b/Block_Puzzle/Assembly-CSharp.csproj
@@ -56,17 +56,19 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Block\RandomizedBlock.cs" />
+    <Compile Include="Assets\Scripts\Block\PatternedBlock.cs" />
     <Compile Include="Assets\Scripts\Manager\UIManager.cs" />
+    <Compile Include="Assets\Scripts\Manager\PatternedGameManager.cs" />
+    <Compile Include="Assets\Scripts\Manager\RandomizedGameManager.cs" />
     <Compile Include="Assets\Scripts\Block\BlockGenerator.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraRotation.cs" />
     <Compile Include="Assets\Scripts\Cube\CubePattern.cs" />
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\Scripts\Block\Block.cs" />
     <Compile Include="Assets\Scripts\Block\BlockGroupStatus.cs" />
-    <Compile Include="Assets\Scripts\Manager\RandomizedGameManager.cs" />
-    <Compile Include="Assets\Scripts\Block\RandomizedBlock.cs" />
-    <Compile Include="Assets\Scripts\Manager\PatternedGameManager.cs" />
-    <Compile Include="Assets\Scripts\Block\PatternedBlock.cs" />
+    <Compile Include="Assets\Scripts\Cube\CubeMaterial.cs" />
+    <Compile Include="Assets\Scripts\Cube\CubeBlocks.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\External Assets\Customizable Skybox\Stylized Sky\Shaders\Stylized Sky.shader" />
