--- a/Block_Puzzle/Assembly-CSharp.csproj
+++ b/Block_Puzzle/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Block\RandomizedBlock.cs" />
+    <Compile Include="Assets\Scripts\Cube\CubeMaterial.cs" />
     <Compile Include="Assets\Scripts\Block\PatternedBlock.cs" />
     <Compile Include="Assets\Scripts\Manager\UIManager.cs" />
     <Compile Include="Assets\Scripts\Manager\PatternedGameManager.cs" />
@@ -67,8 +68,9 @@
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\Scripts\Block\Block.cs" />
     <Compile Include="Assets\Scripts\Block\BlockGroupStatus.cs" />
-    <Compile Include="Assets\Scripts\Cube\CubeMaterial.cs" />
     <Compile Include="Assets\Scripts\Cube\CubeBlocks.cs" />
+    <Compile Include="Assets\Scripts\Block\ISelectGameManager.cs" />
+    <Compile Include="Assets\Scripts\Block\BlockType.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\External Assets\Customizable Skybox\Stylized Sky\Shaders\Stylized Sky.shader" />
