--- a/Block_Puzzle/Assembly-CSharp.csproj
+++ b/Block_Puzzle/Assembly-CSharp.csproj
@@ -59,10 +59,10 @@
     <Compile Include="Assets\Scripts\Camera\CameraPos.cs" />
     <Compile Include="Assets\Scripts\Block\RandomizedBlock.cs" />
     <Compile Include="Assets\Scripts\Cube\CubeMaterial.cs" />
+    <Compile Include="Assets\Scripts\Touch\TouchManager.cs" />
     <Compile Include="Assets\Scripts\Block\PatternedBlock.cs" />
     <Compile Include="Assets\Scripts\UI\UIManager.cs" />
-    <Compile Include="Assets\Scripts\UI\InGame.cs" />
-    <Compile Include="Assets\Scripts\Manager\StageManager.cs" />
+    <Compile Include="Assets\Scripts\Stage\StageManager.cs" />
     <Compile Include="Assets\Scripts\Manager\PatternedGameManager.cs" />
     <Compile Include="Assets\Scripts\Manager\RandomizedGameManager.cs" />
     <Compile Include="Assets\Scripts\Block\BlockGenerator.cs" />
@@ -76,7 +76,9 @@
     <Compile Include="Assets\Scripts\Block\BlockType.cs" />
     <Compile Include="Assets\Scripts\Block\BlockGroupStatus.cs" />
     <Compile Include="Assets\Scripts\Cube\CubeBlocks.cs" />
-    <Compile Include="Assets\Scripts\Touch\TouchManager.cs" />
+    <Compile Include="Assets\Scripts\Async.cs" />
+    <Compile Include="Assets\Scripts\Stage\StageMaker.cs" />
+    <Compile Include="Assets\Scripts\Colors\BlockColors.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\External Assets\UI pack\Documentation.txt" />
