--- a/Block_Puzzle/Assembly-CSharp.csproj
+++ b/Block_Puzzle/Assembly-CSharp.csproj
@@ -59,9 +59,12 @@
     <Compile Include="Assets\Scripts\Camera\CameraPos.cs" />
     <Compile Include="Assets\Scripts\Block\RandomizedBlock.cs" />
     <Compile Include="Assets\Scripts\Cube\CubeMaterial.cs" />
+    <Compile Include="Assets\Scripts\Colors\BlockColors.cs" />
     <Compile Include="Assets\Scripts\Touch\TouchManager.cs" />
+    <Compile Include="Assets\Scripts\Stage\StageMaker.cs" />
     <Compile Include="Assets\Scripts\Block\PatternedBlock.cs" />
     <Compile Include="Assets\Scripts\UI\UIManager.cs" />
+    <Compile Include="Assets\Scripts\Buttons\ButtonSound.cs" />
     <Compile Include="Assets\Scripts\Stage\StageManager.cs" />
     <Compile Include="Assets\Scripts\Manager\PatternedGameManager.cs" />
     <Compile Include="Assets\Scripts\Manager\RandomizedGameManager.cs" />
@@ -77,8 +80,6 @@
     <Compile Include="Assets\Scripts\Block\BlockGroupStatus.cs" />
     <Compile Include="Assets\Scripts\Cube\CubeBlocks.cs" />
     <Compile Include="Assets\Scripts\Async.cs" />
-    <Compile Include="Assets\Scripts\Stage\StageMaker.cs" />
-    <Compile Include="Assets\Scripts\Colors\BlockColors.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\External Assets\UI pack\Documentation.txt" />
