--- a/Block_Puzzle/Assembly-CSharp.csproj
+++ b/Block_Puzzle/Assembly-CSharp.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Assets\Scripts\Stage\StageMaker.cs" />
     <Compile Include="Assets\Scripts\Block\PatternedBlock.cs" />
     <Compile Include="Assets\Scripts\UI\UIManager.cs" />
-    <Compile Include="Assets\Scripts\Buttons\ButtonSound.cs" />
+    <Compile Include="Assets\Scripts\Audio\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Stage\StageManager.cs" />
     <Compile Include="Assets\Scripts\Manager\PatternedGameManager.cs" />
     <Compile Include="Assets\Scripts\Manager\RandomizedGameManager.cs" />
@@ -80,6 +80,7 @@
     <Compile Include="Assets\Scripts\Block\BlockGroupStatus.cs" />
     <Compile Include="Assets\Scripts\Cube\CubeBlocks.cs" />
     <Compile Include="Assets\Scripts\Async.cs" />
+    <Compile Include="Assets\Scripts\Audio\AudioSync.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\External Assets\UI pack\Documentation.txt" />
