--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
+[Ll]ogs/
+[Ll]og/
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
@@ -35,3 +37,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+.DS_Store
