--- a/Block_Puzzle/.editorconfig
+++ b/Block_Puzzle/.editorconfig
@@ -1,7 +1,4 @@
 root = true
 
 [*]
-charset = utf - 8
-indent_style = tab
-indent_size = 4
-csharp_new_line_before_open_brace = none
+charset = utf-8
