--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
     "jsonwebtoken": "^9.0.2"
