로컬 디버깅을 위해 로컬 환경변수 세팅

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
+    "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
